--- a/packages/website/pages/home/home.module.scss
+++ b/packages/website/pages/home/home.module.scss
@@ -1,6 +1,6 @@
 .home-page {
     width: 100%;
-    padding: 20px 20px 3em 20px;
+    padding: 20px 20px 60px 20px;
     box-sizing: border-box;
     position: relative;
 
