--- a/packages/website/components/View/view.module.scss
+++ b/packages/website/components/View/view.module.scss
@@ -4,6 +4,8 @@
     .container {
         width: 100%;
         height: 100vh;
+        box-sizing: border-box;
+        padding-bottom: 50px;
         > iframe {
             z-index: -1;
         }
