--- a/packages/website/components/Home/itemCard.module.scss
+++ b/packages/website/components/Home/itemCard.module.scss
@@ -3,66 +3,63 @@
     box-sizing: border-box;
     box-shadow: var(--shadow-3);
     position: relative;
-    margin: 0.5em 0;
     border-radius: var(--b-radius);
-    max-width: 30em;
-    min-width: 15em;
-    height: 5em;
+    max-width: 560px;
+    min-width: 280px;
+    height: 80px;
+    padding: 10px 16px 10px 80px;
 
     &:hover {
         box-shadow: var(--shadow-2);
     }
 
     .image-wrapper {
-        height: 5em;
-        width: 5em;
-        padding: 1em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 80px;
+        width: 80px;
+        padding: 16px;
         box-sizing: border-box;
-
         .image {
             width: 100%;
             height: 100%;
         }
     }
 
-    .text-wrapper {
-        position: absolute;
-        top: 0;
-        padding: 0.5em 1em 0.5em 5em;
-        height: 100%;
-        width: 100%;
-        box-sizing: border-box;
+    .ellipsis {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 
-        .ellipsis {
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-        }
+    .title {
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 24px;
+        color: var(--t-fore-c);
+    }
+    .description {
+        font-size: 12px;
+        line-height: 18px;
+        height:36px;
+        color: var(--t-fore-c2);
+        overflow: hidden;
+        text-overflow: ellipsis;
+        position: relative;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
 
-        .title {
-            font-size: 1.2em;
-            line-height: 1em;
-            color: var(--t-fore-c);
-            height: 35%;
-        }
-        .description {
-            font-size: 0.8em;
-            line-height: 1.1em;
-            color: var(--t-fore-c2);
-            height: 65%;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            position: relative;
-
-            &::after {
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                content: ' ';
-                color: transparent;
-                // background-color: var(--t-back-c);
-                background: linear-gradient(to right, transparent, var(--t-back-c));
-            }
+        &::after {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 2em;
+            height: 18px;
+            content: ' ';
+            color: transparent;
+            background: linear-gradient(to right, transparent, var(--t-back-c));
         }
     }
 }
