--- a/packages/website/pages/about/index.module.scss
+++ b/packages/website/pages/about/index.module.scss
@@ -1,5 +1,10 @@
 .about-page {
     padding: 20px 20px 60px;
+    line-height: 2;
+
+    > div {
+        margin: 10px 0;
+    }
 
     h1 {
         text-align: center;
