--- a/packages/website/components/TrayMenu/trayBar.module.scss
+++ b/packages/website/components/TrayMenu/trayBar.module.scss
@@ -11,51 +11,62 @@
   z-index: var(--z-index);
   font-size: var(--font-size);
   pointer-events: all;
-}
-.wrp-nav-item-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 
-  > a {
-    text-decoration: none;
+  &.hidden {
+    bottom: -100%;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    > a {
+      text-decoration: none;
+    }
+  }
+  .item {
+    cursor: pointer;
+    width: 3.6em;
+    height: 3.6em;
+    color: #555;
+    font-size: 1em;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0.4em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    --color: #555;
+
+    &.selected {
+      color: var(--sc);
+      --color: var(--sc);
+    }
+
+    .icon {
+      display: block;
+      width: 1.8em;
+      height: 1.8em;
+      fill: var(--color);
+    }
+    .title {
+      font-size: 0.7em;
+      line-height: 1.2;
+      text-align: center;
+      color: var(--color);
+      padding-top: 0.3em;
+      width: 100%;
+      text-decoration: none;
+    }
   }
 }
 
-.wrp-nav-hidden {
-  bottom: -100%;
-}
 
-.wrp-nav-item {
-  width: 3.6em;
-  height: 3.6em;
-  color: #555;
-  font-size: 1em;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 0.4em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  --color: #555;
-}
-.wrp-nav-item-icon {
-  display: block;
-  width: 1.8em;
-  height: 1.8em;
-  fill: var(--color);
-}
-.wrp-nav-item-title {
-  font-size: 0.7em;
-  line-height: 1.2;
-  text-align: center;
-  color: var(--color);
-  padding-top: 0.3em;
-  width: 100%;
-  text-decoration: none;
-}
 
-.wrp-tary-bar-selected {
-  color: var(--sc);
-  --color: var(--sc);
-}
+
+
+
+
+
+
