extension demo & fix @wrp/core bug

--- a/packages/ui/src/components/Explanation/explanation.scss
+++ b/packages/ui/src/components/Explanation/explanation.scss
@@ -83,8 +83,7 @@
         }
     }
 
-    &.hidden-up,
-    &.hidden-down {
+    &.hidden {
         opacity: 0;
         pointer-events: none;
     }
