--- a/packages/ui/src/components/Explanation/pronunciation.scss
+++ b/packages/ui/src/components/Explanation/pronunciation.scss
@@ -1,21 +1,31 @@
-.wrp-pronuciation {
-    display: inline-flex;
-    margin-right: 10px;
-    align-items: center;
-    font-size: 12px;
-    line-height: 1.3;
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
+.wrp-pronunciation {
+  display: inline-flex;
+  margin-right: 10px;
+  align-items: center;
+  font-size: 12px;
+  height: 20px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  padding: 0 5px;
+  margin-left: -5px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  vertical-align: middle;
 
-    .speaker-svg {
-        display: inline-block;
-        padding-left: 5px;
-        width: 18px;
-        height: 18px;
-        transition: all 0.1s;
-    }
+  .speaker-svg {
+    display: inline-block;
+    padding-left: 5px;
+    width: 18px;
+    height: 18px;
+    transition: all 0.1s;
+  }
 
-    &:active {
-        background-color: transparent;
-    }
+  > svg {
+    color: #5A5A5A;
+  }
+
+  &:active {
+    background-color: transparent;
+  }
 }
