--- a/packages/website/components/TrayMenu/trayBar.module.scss
+++ b/packages/website/components/TrayMenu/trayBar.module.scss
@@ -1,4 +1,4 @@
-.wrp-nav {
+.bottom-nav-container {
   position: fixed;
   width: 100vw;
   bottom: 0;
@@ -14,51 +14,6 @@
 
   &.hidden {
     bottom: -100%;
-  }
-
-  .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    > a {
-      text-decoration: none;
-    }
-  }
-  .item {
-    cursor: pointer;
-    width: 3.6em;
-    height: 3.6em;
-    color: #555;
-    font-size: 1em;
-    text-align: center;
-    box-sizing: border-box;
-    padding: 0.4em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    --color: #555;
-
-    &.selected {
-      color: var(--sc);
-      --color: var(--sc);
-    }
-
-    .icon {
-      display: block;
-      width: 1.8em;
-      height: 1.8em;
-      fill: var(--color);
-    }
-    .title {
-      font-size: 0.7em;
-      line-height: 1.2;
-      text-align: center;
-      color: var(--color);
-      padding-top: 0.3em;
-      width: 100%;
-      text-decoration: none;
-    }
   }
 }
 
