--- a/packages/website/components/View/loading.module.scss
+++ b/packages/website/components/View/loading.module.scss
@@ -14,7 +14,7 @@
     background-color: white;
     pointer-events: all;
 
-    > span {
+    > .url {
         padding-left: 10px;
         font-size: 14px;
         user-select: all;
