--- a/packages/website/pages/about/index.module.scss
+++ b/packages/website/pages/about/index.module.scss
@@ -1,25 +1,37 @@
 .about-page {
-    padding: 20px 20px 60px;
-    line-height: 2;
+  padding: 20px 20px 60px;
+  line-height: 2;
 
-    > div {
-        margin: 10px 0;
-    }
+  > div {
+    margin: 10px 0;
+  }
 
-    h1 {
-        text-align: center;
-        font-size: 20px;
-    }
+  h1 {
+    text-align: center;
+    font-size: 20px;
+  }
 
-    .image {
-        position: relative;
-        height: 450px;
-    }
+  .image {
+    position: relative;
+    height: 450px;
 
-    .qrcode {
-        position: relative;
-        margin: auto;
-        width: 150px;
-        height: 150px;
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
+  }
+
+  .qrcode {
+    position: relative;
+    margin: auto;
+    width: 150px;
+    height: 150px;
+
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
 }
