fix: proxy failed View & theme

--- a/packages/website/components/Home/itemCard.module.scss
+++ b/packages/website/components/Home/itemCard.module.scss
@@ -9,9 +9,9 @@
   height: 80px;
   padding: 10px 16px 10px 80px;
 
-  &:hover {
-    box-shadow: var(--shadow-2);
-  }
+  // &:hover {
+  //   box-shadow: var(--shadow-2);
+  // }
 
   .image-wrapper {
     position: absolute;
