--- a/packages/website/pages/about/index.module.scss
+++ b/packages/website/pages/about/index.module.scss
@@ -1,5 +1,5 @@
 .about-page {
-  padding: 20px 20px 60px;
+  padding: 20px 20px 160px;
   line-height: 2;
 
   > div {
@@ -26,12 +26,18 @@
     position: relative;
     margin: auto;
     width: 150px;
-    height: 150px;
+
 
     > img {
       width: 100%;
-      height: 100%;
+      height: 150px;
       object-fit: contain;
+    }
+
+    > div {
+      font-size: 10px;
+      line-height: 1.5;
+      text-align: center;
     }
   }
 }
